tests/Asm/negative/vtest004.jva
-- not enough function arguments

function f(*, *) {
  push arg[0];
  push arg[1];
  add;
  ret;
}

function main() {
  push 1;
  tcall f;
}
